services/service-a/metadata/8080_service_config.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: app-playground
  labels:
    app: service-a
    app.kubernetes.io/component: service-a
    app.kubernetes.io/instance: service-a
    app.kubernetes.io/name: service-a
    app.kubernetes.io/part-of: service-a
spec:
  ports:
    - name: http-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: service-a
    deployment: service-a
  type: ClusterIP
