services/service-a/metadata/sm_1_ingress_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-services-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8080
        name: http-8080
        protocol: HTTP
      hosts:
        - "*"
