services/service-a/metadata/sm_3_virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-services-vs
spec:
  hosts:
    - "*"
  gateways:
    - demo-services-gateway
  http:
    - match:
        - uri:
            prefix: /service-a
      rewrite:
        uri: /
        uriRegexRewrite:
          match: ^/service-a/(/.*)$
          rewrite: /\1
      route:
        - destination:
            host: service-a.app-playground.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /service-b
      rewrite:
        uri: /
        uriRegexRewrite:
          match: ^/service-b/(/.*)$
          rewrite: /\1
      route:
        - destination:
            host: service-b.app-playground.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /service-c
      rewrite:
        uri: /
        uriRegexRewrite:
          match: ^/service-c/(/.*)$
          rewrite: /\1
      route:
        - destination:
            host: service-c.app-playground.svc.cluster.local
            port:
              number: 8080
