services/service-a/metadata/sm_4_virtual_service_chaos.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-services-vs
spec:
  hosts:
    - "*"
  gateways:
    - demo-services-gateway
  http:
    - match:
        - uri:
            prefix: /service-a
      route:
        - destination:
            host: service-a.maarten-service-mesh.svc.cluster.local
            subset: v1
            port:
              number: 8080
      retries:
        attempts: 0
      #        perTryTimeout: 2s
      #        retryOn: 5xx,retriable-4xx
    - match:
        - uri:
            prefix: /service-b
      route:
        - destination:
            host: service-b.maarten-service-mesh.svc.cluster.local
            port:
              number: 8080
      timeout: 1s
      retries:
        attempts: 0
#        perTryTimeout: 2s
#        retryOn: 5xx,retriable-4xx
    - match:
        - uri:
            prefix: /service-c
      route:
        - destination:
            host: service-c.maarten-service-mesh.svc.cluster.local
            port:
              number: 8080
      retries:
        attempts: 0
