services/service-a/metadata/sm_4_virtual_service_weighted.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: demo-services-vs
spec:
  hosts:
    - "*"
  gateways:
    - demo-services-gateway
  http:
    - match:
        - uri:
            prefix: /service-a
      route:
        - destination:
            host: service-a.maarten-service-mesh.svc.cluster.local
            subset: v1
            port:
              number: 8080
          weight: 50
        - destination:
            host: service-a.maarten-service-mesh.svc.cluster.local
            subset: v2
            port:
              number: 8080
          weight: 50
    - match:
        - uri:
            prefix: /service-b
      route:
        - destination:
            host: service-b.maarten-service-mesh.svc.cluster.local
            port:
              number: 8080
    - match:
        - uri:
            prefix: /service-c
#      rewrite:
#        uri: /
#        uriRegexRewrite:
#          match: ^/service-c/(/.*)$
#          rewrite: /\1
      route:
        - destination:
            host: service-c.maarten-service-mesh.svc.cluster.local
            port:
              number: 8080
